Updated example for env

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+MONGODB_URI="Your MongoDB Database URI"
+OPENWEATHERMAP_API_KEY="Your Open Weather API Key"
