--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,27 @@
 {
-    "crons": [
-      {
-        "path": "/api/fetchRealTimeWeatherData",
-        "schedule": "*/5 * * * *"
+    "functions": {
+      "api/fetchRealTimeWeatherData.ts": {
+        "runtime": "nodejs20.x",
+        "memory": 256,
+        "maxDuration": 60
       },
-      {
-        "path": "/api/rollupDailyWeather",
-        "schedule": "0 0 * * *"
+      "api/rollupDailyWeather.ts": {
+        "runtime": "nodejs20.x",
+        "memory": 256,
+        "maxDuration": 60
       }
-    ]
+    },
+    "cron": {
+      "jobs": [
+        {
+          "path": "/api/fetchRealTimeWeatherData",
+          "schedule": "*/5 * * * *"
+        },
+        {
+          "path": "/api/rollupDailyWeather",
+          "schedule": "0 0 * * *"
+        }
+      ]
+    }
   }
   
