--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,12 @@
 {
-    "functions": {
-      "api/fetchRealTimeWeatherData.ts": {
-        "runtime": "nodejs20.x",
-        "memory": 256,
-        "maxDuration": 60
-      },
-      "api/rollupDailyWeather.ts": {
-        "runtime": "nodejs20.x",
-        "memory": 256,
-        "maxDuration": 60
-      }
-    },
-    "cron": [
+    "crons": [
         {
-          "path": "/api/fetchRealTimeWeatherData",
-          "schedule": "*/5 * * * *"
+            "path": "/api/fetchRealTimeWeatherData",
+            "schedule": "*/5 * * * *"
         },
         {
-          "path": "/api/rollupDailyWeather",
-          "schedule": "0 0 * * *"
+            "path": "/api/rollupDailyWeather",
+            "schedule": "0 0 * * *"
         }
-      ]
-  }
-  
+    ]
+}
