--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-cron": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.80.3",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
